learn ul , li , ol , a , image tag

--- a/html/first.html
+++ b/html/first.html
@@ -1,4 +1,6 @@
 <!-- Talk to brower , this is a html page-->
+<!-- This is comments , command + / -->
+
 <!DOCTYPE html>
 <html>
 <!-- This talk to brower, what's this page-->
@@ -10,6 +12,18 @@
 <body>
     <!-- Only one h1 at a page-->
     <h1>Banana</h1>
+
+    <!-- If we want to let user redirect other page, we can use a tag with attribute herf and add link-->
+    <a href="https://www.google.com/">I AM A LINK to google!</a>
+    <a href="second.html">I AM A LINK to second!</a>
+    <!-- show image-->
+    <div>
+        <img src="https://a.travel-assets.com/findyours-php/viewfinder/images/res70/470000/470134-Taipei.jpg"
+            width="800" height="600" alt="Taipei Street">
+    </div>
+    <div>
+        <img src="picture/taiwan.jpg" alt="Taipei 101">
+    </div>
     <!-- paragraph -->
     <p>
         A banana is an elongated, edible fruit—botanically a berry[1]—produced by several kinds of large treelike
@@ -17,8 +31,8 @@
         flowering plants in the genus Musa. In some countries, cooking bananas are called plantains, distinguishing them
         from
         <b>dessert bananas</b>
-        </p>
-        <p>
+    </p>
+    <p>
         Musa species are native to tropical Indomalaya and Australia; they were probably domesticated in New Guinea.
         They
         are grown in 135 countries, primarily for their fruit, and to a lesser extent to make banana paper and textiles,
@@ -26,8 +40,8 @@
         China,
         which together accounted for approximately 26% of total production. Bananas are eaten raw or cooked in recipes
         varying from curries to banana chips, fritters, fruit preserves, or simply baked or steamed.
-        </p>
-        <h2>Description</h2>
+    </p>
+    <h2>Description</h2>
     <p>
         The banana plant is the largest herbaceous flowering plant.[2] All the above-ground parts of a banana plant grow
         from
@@ -58,7 +72,22 @@
         the Dravidian languages of India, into Arabic as a Wanderwort.[20] The word "banana" is thought to be of West
         African
         origin, possibly from the Wolof word banaana, and passed into English via Spanish or Portuguese.[21]
-        </p>
+    </p>
+    <!-- List infomartion-->
+    <h2>Kind Of Bananas</h2>
+
+    <ul>
+        <li>Manzano</li>
+        <li>Apple Banana</li>
+        <li>
+            Clade I
+            <ul>
+                <li>Musa acuminata</li>
+                <li>Musa ornata</li>
+            </ul>
+        </li>
+    </ul>
+
 </body>
 
 </html>
