--- a/html/first.html
+++ b/html/first.html
@@ -12,18 +12,28 @@
 <body>
     <!-- Only one h1 at a page-->
     <h1>Banana</h1>
-
+    <hr>
+    <h2>
+        The Man Who Knew Trees
+    </h2>
+    <p>Stanley Plumly knew trees. It was partly the accident of circumstance.<br>
+        His grandfather, P. W. Plumly<sup><a href="">[1]</a></sup>, a “farmer
+        of trees,” founded the P. W. Plumly Lumber Corporation in Winchester, Virginia, a small town in the Shenandoah
+        Valley. The business employed most of the Plumly family and, during the Second World War, it made millions by
+        catering to the US army’s nearly limitless appetite for lumber. </p>
     <!-- If we want to let user redirect other page, we can use a tag with attribute herf and add link-->
     <a href="https://www.google.com/">I AM A LINK to google!</a>
     <a href="second.html">I AM A LINK to second!</a>
-    <!-- show image-->
+    <!-- div is a block element. 
+     A block-level element always starts on a new line, and the browsers automatically add some space-->
     <div>
+        <!-- show image-->
         <img src="https://a.travel-assets.com/findyours-php/viewfinder/images/res70/470000/470134-Taipei.jpg"
             width="800" height="600" alt="Taipei Street">
-    </div>
-    <div>
         <img src="picture/taiwan.jpg" alt="Taipei 101">
     </div>
+    <!-- span is inline elment. An inline element does not start on a new line.-->
+    <span></span>
     <!-- paragraph -->
     <p>
         A banana is an elongated, edible fruit—botanically a berry[1]—produced by several kinds of large treelike
@@ -87,7 +97,11 @@
             </ul>
         </li>
     </ul>
-
+    <h2>I like H<sub>2</sub>O</h2>
+    <p><sup>1</sup>/<sub>2</sub>+1/2=1</p>
+    <!-- entity code -->
+    <!-- Reserved characters in HTML must be replaced with entities:-->
+    <h3> 1 &lt; 5 &gt; 6</h3>
 </body>
 
 </html>
