practice semantics tag : main , header->nav , footer

--- a/html/second.html
+++ b/html/second.html
@@ -8,7 +8,7 @@
 <head> </head>
 <bod>
     <h2>This is second page</h2>
-    <a href="first.html">back to banana</a>
+    <a href="banana.html">back to banana</a>
 </bod>
 
 </html>
