practice a reg form

--- a/html/forms.html
+++ b/html/forms.html
@@ -85,6 +85,23 @@
         </p>
         <button>Submit</button>
     </form>
+    <!-- browser Validations -->
+    <h2>Validations Demo</h2>
+    <form action="/dummy">
+        <label for="first">Enter First Name</label>
+        <input type="text" name="first" id="first" required></input>
+        <p>
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username" minlength="5" maxlength="20" required></input>
+        </p>
+        <p>
+            <input type="email" required>
+        </p>
+        <p>
+            <input type="url" required>
+        </p>
+        <button>Submit</button>
+    </form>
 </body>
 
 </html>
