--- a/css/selector/starter.html
+++ b/css/selector/starter.html
@@ -12,6 +12,7 @@
     <nav>
         <label for="search">Search</label>
         <input type="text" placeholder="search" id="search">
+        <input type="password" placeholder="password" id="password">
         <button>Log In</button>
         <button id="signup">Sign Up</button>
     </nav>
@@ -53,6 +54,7 @@
                 </li>
             </ul>
         </nav>
+        <a href="#license">Content is avaiable under these licenses.</a>
     </footer>
 
 </body>
