--- a/css/selector/starter.html
+++ b/css/selector/starter.html
@@ -36,6 +36,18 @@
             <button>+Vote</button>
             <hr>
         </section>
+
+        <p>
+            Taipei, Taiwan/Hong Kong —
+
+            Giant, the world’s largest bike manufacturer, on Thursday warned of delays to shipments to the United States
+            after American customs officials announced a surprise ban on imports over unspecified forced labor
+            accusations.
+
+            US Customs and Border Protection (CBP) issued an order on Wednesday to detain Giant bikes, their parts, and
+            accessories manufactured in Taiwan following an investigation into the bike-making powerhouse that found
+            indicators of forced labor.
+        </p>
     </main>
     <footer>
         <nav>
@@ -50,7 +62,7 @@
                     <a href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a href="#puppies">Puppies</a>
+                    <a href="#www.google.com">Google</a>
                 </li>
             </ul>
         </nav>
