Basic CSS Display

--- a/css/box_model/index.html
+++ b/css/box_model/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Hello</h1>
+    <h1>Hello<span>:)</span></h1>
     <div id="one">Taiwanese street food features a wide range of iconic dishes, including the infamous Stinky Tofu,
         delicious Gua
         Bao (Pork Belly Buns), savory Oyster Omelets, and flavorful Yansu Ji (Salt & Pepper Fried Chicken), often found
@@ -22,7 +22,7 @@
         delicious Gua
         Bao (Pork Belly Buns), savory Oyster Omelets, and flavorful Yansu Ji (Salt & Pepper Fried Chicken), often found
         at bustling night markets. </div>
-
+    <button>Pad Me!</button>
 </body>
 
 </html>
