--- a/css/rwd_flexbox/index.html
+++ b/css/rwd_flexbox/index.html
@@ -14,11 +14,14 @@
     <h1>Let's Play With Flexbox</h1>
 
     <section id="container">
-        <div style="background-color: #80ffdb"></div>
-        <div style="background-color: #64dfdf"></div>
-        <div style="background-color: #48bfe3"></div>
-        <div style="background-color: #5390d9"></div>
-        <div style="background-color: #6930c3"></div>
+        <div style="background-color: #80ffdb">H</div>
+        <div style="background-color: #64dfdf">E</div>
+        <div style="background-color: #48bfe3;">L</div>
+        <div style="background-color: #5390d9;">L</div>
+        <!-- 
+        height: 100px; font-size: 8em;
+        -->
+        <div style="background-color: #6930c3;">O</div>
     </section>
 
 </body>
