--- a/Bootstrap/grid.html
+++ b/Bootstrap/grid.html
@@ -31,41 +31,60 @@
     </div>
     <!-- RWD Practice, use two col to show user different size screen-->
     <h2 class="display-4">Responsive Grid</h2>
+    <div class="row align-content-center justify-content-start >
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae adipisci quasi qui eveniet nesciunt
+        molestias aut nostrum, eum accusamus. Nobis, quibusdam aliquam velit enim quisquam excepturi nulla optio
+        esse deserunt.
+    </div>
+    <div class=" col-md-6 col-xl-3 bg-success">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, corrupti error, nihil, exercitationem
+        delectus dolores sapiente molestiae placeat iste accusantium quod? Iure dolore voluptate a alias, sunt
+        laborum culpa illo!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, corrupti error, nihil, exercitationem
+        delectus dolores sapiente molestiae placeat iste accusantium quod? Iure dolore voluptate a alias, sunt
+        laborum culpa illo!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, corrupti error, nihil, exercitationem
+        delectus dolores sapiente molestiae placeat iste accusantium quod? Iure dolore voluptate a alias, sunt
+        laborum culpa illo!
+    </div>
+    <div class="col-md-6 col-xl-3 bg-info">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae adipisci quasi qui eveniet nesciunt
+        molestias aut nostrum, eum accusamus. Nobis, quibusdam aliquam velit enim quisquam excepturi nulla optio
+        esse deserunt.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, corrupti error, nihil, exercitationem
+        delectus dolores sapiente molestiae placeat iste accusantium quod? Iure dolore voluptate a alias, sunt
+        laborum culpa illo!
+    </div>
+    <div class="col-md-6 col-xl-3 bg-success align-self-end">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, corrupti error, nihil, exercitationem
+        delectus dolores sapiente molestiae placeat iste accusantium quod? Iure dolore voluptate a alias, sunt
+        laborum culpa illo!
+    </div>
+    <h3>Justify Content</h3>
+    <div class="row boarder Justify-content-center justofy-content-xl-between">
+        <div class="col-4 bg-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut debitis atque
+            aperiam consequatur accusantium alias praesentium dolores laudantium iure at sunt quasi sit doloremque
+            quidem sequi, maxime ex perspiciatis aspernatur.
+        </div>
+        <div class="col-4 bg-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut debitis atque
+            aperiam consequatur accusantium alias praesentium dolores laudantium iure at sunt quasi sit doloremque
+            quidem sequi, maxime ex perspiciatis aspernatur.
+        </div>
+    </div>
     <div class="row">
-        <div class="col-md-6 col-xl-3 bg-info">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae adipisci quasi qui eveniet nesciunt
-            molestias aut nostrum, eum accusamus. Nobis, quibusdam aliquam velit enim quisquam excepturi nulla optio
-            esse deserunt.
+        <div class="col-xl-4 col-md-6">
+            <img class="img-fluid"
+                src="https://images.unsplash.com/photo-1606567595334-d39972c85dbe?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1974">
         </div>
-        <div class="col-md-6 col-xl-3 bg-success">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, corrupti error, nihil, exercitationem
-            delectus dolores sapiente molestiae placeat iste accusantium quod? Iure dolore voluptate a alias, sunt
-            laborum culpa illo!
+        <div class="col-xl-4 col-md-6">
+            <img class="img-fluid"
+                src="https://plus.unsplash.com/premium_photo-1674487959493-8894cc9473ea?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=2136">
         </div>
-        <div class="col-md-6 col-xl-3 bg-info">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae adipisci quasi qui eveniet nesciunt
-            molestias aut nostrum, eum accusamus. Nobis, quibusdam aliquam velit enim quisquam excepturi nulla optio
-            esse deserunt.
+        <div class="col-xl-4 col-md-6">
+            <img class="img-fluid"
+                src="https://images.unsplash.com/photo-1497206365907-f5e630693df0?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=2080">
         </div>
-        <div class="col-md-6 col-xl-3 bg-success">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, corrupti error, nihil, exercitationem
-            delectus dolores sapiente molestiae placeat iste accusantium quod? Iure dolore voluptate a alias, sunt
-            laborum culpa illo!
-        </div>
-        <div class="row">
-            <div class="col-xl-4 col-md-6">
-                <img class="img-fluid"
-                    src="https://images.unsplash.com/photo-1606567595334-d39972c85dbe?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1974">
-            </div>
-            <div class="col-xl-4 col-md-6">
-                <img class="img-fluid"
-                    src="https://plus.unsplash.com/premium_photo-1674487959493-8894cc9473ea?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=2136">
-            </div>
-            <div class="col-xl-4 col-md-6">
-                <img class="img-fluid"
-                    src="https://images.unsplash.com/photo-1497206365907-f5e630693df0?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=2080">
-            </div>
-        </div>
+    </div>
     </div>
     </div>
     </div>
