javaScript const, let, boolean, naming

--- a/javascript/template.html
+++ b/javascript/template.html
@@ -64,7 +64,34 @@
         let i = 0;
         i++;
         let result = i++;
-        result
+        // const
+        // const not allow to change or update
+        const luckyNum = 26;
+        // var
+        // var allow to change or update
+        var runDistance = 26.2;
+        runDistance += 1;
+        runDistance;
+        // boolean 
+        // only two value -> true / false
+        let varTrue = true;
+        let varFalse = false;
+        // other way to set boolean
+        varTrue = 1;   // > 1 or < -1 always boolean true
+        varFalse = 0;  // 0 always false;
+        Boolean(varTrue);
+        varTrue = -1;
+        Boolean(varTrue);
+        Boolean(varFalse);
+        // variable can change type
+        let testType = 100;
+        testType = false;
+        // naming
+        // you can't start with number or escapse char,
+        // and char can't with space
+        // let 1hello = 100;     // -> error
+        // let helle Work = 100; // -> error
+        // let !venvneriboj = 1; // -> error
     </script>
 </body>
 
