javascript String literal and Comparisons

--- a/javascript/primitiveTypes2.html
+++ b/javascript/primitiveTypes2.html
@@ -46,6 +46,12 @@
         sMsg.slice(-5); // we can use negative number
         let qMsg = 'haha that is so funny';
         qMsg.replace('haha', 'grest!!!');
+        // Template Lierals
+        let liter = `I like ${"Tom"} cats`;
+        let num = 12;
+        let kkkk = `there is ${num} monkey`;
+        // Null and Undefined
+        // Undefined means value are undefine
     </script>
 </body>
 
