--- a/javascript/object.html
+++ b/javascript/object.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Array Method</title>
+    <title>Objects</title>
 </head>
 
 <body>
-    <h1>Array Method</h1>
-    <script src="array_method.js"></script>
+    <h1>Objects</h1>
+    <script src="object.js"></script>
 </body>
 
 </html>
