--- a/javascript/dom/event/clicks/index.html
+++ b/javascript/dom/event/clicks/index.html
@@ -14,6 +14,12 @@
 
     <!-- use js to add onclick events -->
     <button id="v2">Click Me!(2nd Version)</button>
+
+    <!-- use js to add addEventListener -->
+    <button id="v3">Click Me!(3rd Version)</button>
+
+    <button id="tas">Twist & Shout</button>
+
     <script src="app.js"></script>
 </body>
 
